<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5"
    android:padding="16dp"
    android:outlineAmbientShadowColor="@color/pink">

    <TextView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_rowWeight="1"
        android:layout_columnSpan="4"
        android:textSize="42sp"
        android:text=""
        android:gravity="end"
        android:textColor="@color/greyBlue1"/>

    <Button
        android:id="@+id/one"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:text="@string/one"/>

    <Button
        android:id="@+id/two"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/two"/>


    <Button
        android:id="@+id/three"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/three" />

    <Button
        android:id="@+id/four"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/four"/>

    <Button
        android:id="@+id/five"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/six"/>

    <Button
        android:id="@+id/seven"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/seven"/>

    <Button
        android:id="@+id/eight"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/eight"/>

    <Button
        android:id="@+id/nine"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/nine"/>

    <Button
        android:id="@+id/zero"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/zero"/>

    <Button
        android:id="@+id/plus"
        android:layout_columnWeight="1"
        android:layout_rowWeight ="1"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/plus"
        android:layout_marginStart="15dp"
        android:background="@color/greyBlue2"
        />

    <Button
        android:id="@+id/minus"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/minus"
        android:layout_marginStart="15dp"
        android:background="@color/greyBlue2"/>

    <Button
        android:id="@+id/equal"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_row="3"
        android:text="@string/equal"
        android:textColor="@color/yellow"
        android:layout_marginStart="15dp"
        android:background="@color/greyBlue2"/>

    <Button
        android:id="@+id/clear"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_row="4"
        android:text="@string/clear"
        android:textColor="@color/yellow"
        android:layout_marginStart="15dp"
        android:background="@color/greyBlue2"/>


</GridLayout>
